# ai-enterprise-os

./: .env.example  .gitignore  .pre-commit-config.yaml  Architecture.md  Contributing.md  Development.md  FolderStructure.md  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
agents/: README.md
apps/mobile/: pubspec.yaml
apps/web-admin/: index.html  package.json
apps/web-portal/: index.html  package.json
docs/: MASTER-INDEX.md  MODULE-STANDARD.md  NAMING-CONVENTION.md  REPOSITORY-MAP.md  REPOSITORY-STANDARD.md  ROADMAP.md  TRACEABILITY-MATRIX.md
docs/01-vision/: PROJECT_VISION.md
docs/02-product/: FEATURE_ROADMAP.md  PRD.md
docs/03-architecture/: AI_ARCHITECTURE.md  DATA_ARCHITECTURE.md  SECURITY_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md
docs/04-engineering/: CODING_STANDARD.md  GIT_WORKFLOW.md  TESTING_STANDARD.md
docs/05-agents/: CEO_AGENT.md  ENGINEER_AGENT.md  PRODUCT_AGENT.md  QA_AGENT.md
docs/ADR/: ADR-0001-Repository-Structure.md  ADR-0002-Service-Boundaries.md  ADR-0003-Shared-Packages.md  ADR-0004-Event-Driven-Architecture.md  (+3 more)
sdk/: README.md
services/: conftest.py
services/identity-service/: Dockerfile  README.md  pyproject.toml
services/identity-service/src/identity_service/: main.py
services/identity-service/tests/: test_health_identity_service.py
services/notification-service/: Dockerfile  README.md  pyproject.toml
services/notification-service/src/notification_service/: main.py
services/notification-service/tests/: test_health_notification_service.py
tools/: README.md
(+321 files in other folders)
