[project]
name = "identity-service"
version = "0.1.0"
description = "AI Enterprise OS identity service foundation"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "opentelemetry-sdk>=1.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
